# GreenScreenMatting

./: .gitignore  CMakeLists.txt  README.md  green_screen_matting.kdev4  main.cpp
config/: config.yml
include/: base_matting.h  bayesian_matting.h  color_matting.h  trimap_generator.h
src/: bayesian_matting.cpp  baysian_demo.cpp  color_demo.cpp  color_matting.cpp  main.cpp  trimap_generator.cpp
